@@ -2,11 +2,12 @@ Package: RadOnc
 Type: Package
 Title: Analytical Tools for Radiation Oncology
 Version: 1.1.6
-Date: 2020-10-02
+Date: 2021-01-30
 Author: Reid F. Thompson <reid.thompson@gmail.com>
 Maintainer: Reid F. Thompson <reid.thompson@gmail.com>
 Imports: stats, utils
-Depends: R (>= 3.0.0), graphics, grDevices, methods, rgl, geometry, oro.dicom (>= 0.5.0), ptinpoly
+Depends: R (>= 3.0.0), graphics, grDevices, methods, geometry, oro.dicom (>= 0.5.0), ptinpoly
+Suggests: rgl
 Description: Designed for the import, analysis, and visualization of dosimetric and volumetric data in Radiation Oncology, the tools herein enable import of dose-volume histogram information from multiple treatment planning system platforms and 3D structural representations and dosimetric information from 'DICOM-RT' files.  These tools also enable subsequent visualization and statistical analysis of these data.
 License: GPL (>=2)
 LazyData: yes
